# Cmake

project_dir/: CMakeLists.txt
project_dir/include/: Print.h  WriteInFile.h
project_dir/src/: Print.cpp  main.cpp
